MyProject/force-app/main/default/objects/Appointment_Appointment__c/Appointment_Appointment__c.object-meta.xml
<CustomObject>
    <label>Appointment - Appointment</label>
    <nameField>
        <label>Appointment - Appointment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointment - Appointment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>