MyProject/force-app/main/default/objects/Appointment_Appointment__c/fields/Appointment_No__c.field-meta.xml
<CustomField>
    <fullName>Appointment_No__c</fullName>
    <label>Appointment No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>