MyProject/force-app/main/default/objects/Appointment_Appointment__c/fields/Consultant_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant - Consultant</label>
    <referenceTo>Consultant_Consultant__c</referenceTo>
    <relationshipLabel>Appointment - Appointment</relationshipLabel>
    <relationshipName>Appointment_Appointment</relationshipName>
    <type>Lookup</type>
</CustomField>