MyProject/force-app/main/default/objects/Appointment_Appointment__c/fields/PurposeTopic__c.field-meta.xml
<CustomField>
    <fullName>PurposeTopic__c</fullName>
    <label>Purpose/Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>