MyProject/force-app/main/default/objects/Appointment_Appointment__c/fields/Student_Student__c.field-meta.xml
<CustomField>
    <fullName>Student_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student - Student</label>
    <referenceTo>Student_Student__c</referenceTo>
    <relationshipLabel>Appointment - Appointment</relationshipLabel>
    <relationshipName>Appointment_Appointment</relationshipName>
    <type>Lookup</type>
</CustomField>