MyProject/force-app/main/default/objects/Appointment_Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appointment_DateTime__c</columns>
    <columns>Appointment_No__c</columns>
    <columns>Notes__c</columns>
    <columns>PurposeTopic__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>